--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
   
   <script>
     tailwind.config = {
@@ -39,9 +38,8 @@
   <style>
     .card-hover { transition: transform 0.3s ease; }
     .card-hover:hover { transform: translateY(-5px); }
-    /* 确保图表容器相对定位 */
-    .chart-container { position: relative; height: 100%; width: 100%; min-height: 250px; }
-    .chart-container-sm { position: relative; height: 100%; width: 100%; min-height: 200px; }
+    /* 核心修复：移除 min-height 限制，改用 Tailwind 类控制具体高度 */
+    .chart-container { position: relative; height: 100%; width: 100%; }
   </style>
 </head>
 <body class="bg-gray-50 font-sans text-gray-800 min-h-screen flex flex-col">
@@ -248,7 +246,7 @@
             </div>
           </div>
           <div class="lg:col-span-5">
-            <div class="chart-container">
+            <div class="chart-container h-[300px]">
                 <canvas id="viewsChart"></canvas>
             </div>
           </div>
@@ -315,7 +313,7 @@
             </div>
           </div>
           <div class="lg:col-span-5">
-            <div class="chart-container">
+            <div class="chart-container h-[300px]">
                 <canvas id="engagementChart"></canvas>
             </div>
           </div>
@@ -386,10 +384,10 @@
             </div>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-              <div class="chart-container-sm">
+              <div class="chart-container h-[220px]">
                   <canvas id="readingChart"></canvas>
               </div>
-              <div class="chart-container-sm">
+              <div class="chart-container h-[220px]">
                   <canvas id="videoChart"></canvas>
               </div>
           </div>
@@ -427,7 +425,7 @@
               <div class="text-xs text-gray-500">10%</div>
             </div>
           </div>
-          <div class="chart-container flex justify-center">
+          <div class="chart-container h-[220px] flex justify-center">
               <canvas id="engagementBreakdownChart"></canvas>
           </div>
         </div>
@@ -436,13 +434,13 @@
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
         <div class="bg-white rounded-lg shadow-md p-6">
           <h2 class="text-lg font-bold text-gray-800 mb-4">WeChat</h2>
-          <div class="chart-container">
+          <div class="chart-container h-[280px]">
               <canvas id="wechatFollowersChart"></canvas>
           </div>
         </div>
         <div class="bg-white rounded-lg shadow-md p-6">
           <h2 class="text-lg font-bold text-gray-800 mb-4">Video</h2>
-          <div class="chart-container">
+          <div class="chart-container h-[280px]">
               <canvas id="videoFollowersChart"></canvas>
           </div>
         </div>
@@ -453,7 +451,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-6">
           <div class="bg-gray-50 rounded-lg p-6 flex flex-col justify-center items-center text-center">
             <h3 class="text-md font-semibold text-gray-800 mb-4">KPI达成率</h3>
-            <div class="chart-container-sm flex justify-center">
+            <div class="chart-container h-[200px] flex justify-center">
                 <canvas id="kpiGaugeChart"></canvas>
             </div>
             <div class="text-center mt-[-40px]">
@@ -463,13 +461,13 @@
           </div>
           <div class="bg-gray-50 rounded-lg p-6">
             <h3 class="text-md font-semibold text-gray-800 mb-4 text-center">Actual vs KPI</h3>
-            <div class="chart-container-sm">
+            <div class="chart-container h-[200px]">
                 <canvas id="actualVsKpiChart"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-6">
             <h3 class="text-md font-semibold text-gray-800 mb-4 text-center">Personal Distribution</h3>
-            <div class="chart-container-sm flex justify-center">
+            <div class="chart-container h-[200px] flex justify-center">
                 <canvas id="professionalTitleChart1"></canvas>
             </div>
           </div>
@@ -477,19 +475,19 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
           <div class="bg-gray-50 rounded-lg p-6">
             <h3 class="text-md font-semibold text-gray-800 mb-4 text-center">City level Distribution</h3>
-            <div class="chart-container-sm">
+            <div class="chart-container h-[200px]">
                 <canvas id="cityLevelChart1"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-6">
             <h3 class="text-md font-semibold text-gray-800 mb-4 text-center">Hospital Class Distribution</h3>
-            <div class="chart-container-sm">
+            <div class="chart-container h-[200px]">
                 <canvas id="hospitalLevelChart1"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-6">
             <h3 class="text-md font-semibold text-gray-800 mb-4 text-center">TA Distribution (Top 5)</h3>
-            <div class="chart-container-sm flex justify-center">
+            <div class="chart-container h-[200px] flex justify-center">
                 <canvas id="departmentChart1"></canvas>
             </div>
           </div>
@@ -501,25 +499,25 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
           <div class="bg-gray-50 rounded-lg p-4">
             <h4 class="text-md font-semibold text-gray-800 mb-3 text-center">Personal Distribution</h4>
-            <div class="chart-container-sm flex justify-center">
+            <div class="chart-container h-[200px] flex justify-center">
                 <canvas id="professionalTitleChart2"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-4">
             <h4 class="text-md font-semibold text-gray-800 mb-3 text-center">City level Distribution</h4>
-            <div class="chart-container-sm">
+            <div class="chart-container h-[200px]">
                 <canvas id="cityLevelChart2"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-4">
             <h4 class="text-md font-semibold text-gray-800 mb-3 text-center">Hospital Class Distribution</h4>
-            <div class="chart-container-sm">
+            <div class="chart-container h-[200px]">
                 <canvas id="hospitalLevelChart2"></canvas>
             </div>
           </div>
           <div class="bg-gray-50 rounded-lg p-4">
             <h4 class="text-md font-semibold text-gray-800 mb-3 text-center">TA Distribution (top 5)</h4>
-            <div class="chart-container-sm flex justify-center">
+            <div class="chart-container h-[200px] flex justify-center">
                 <canvas id="departmentChart2"></canvas>
             </div>
           </div>
@@ -564,7 +562,7 @@
 
       <div class="bg-white rounded-lg shadow-md p-6 mb-6">
         <h2 class="text-xl font-bold text-gray-800 mb-6">大中华区MQL</h2>
-        <div class="flex justify-center h-[350px]">
+        <div class="flex justify-center h-[300px]">
           <div class="chart-container w-full max-w-[500px]">
               <canvas id="greaterChinaMqlChart"></canvas>
           </div>
@@ -680,7 +678,7 @@
 
       <div class="bg-white rounded-lg shadow-md p-6 mb-6">
         <h2 class="text-xl font-bold text-gray-800 mb-6">User Conversion Funnel（使用漏斗图展示）</h2>
-        <div class="flex justify-center h-[400px]">
+        <div class="flex justify-center h-[350px]">
           <div class="chart-container w-full max-w-[800px]">
               <canvas id="funnelChart"></canvas>
           </div>
@@ -725,7 +723,7 @@
     Chart.defaults.font.family = "'Inter', system-ui, sans-serif";
     Chart.defaults.color = '#64748b';
     Chart.defaults.responsive = true;
-    Chart.defaults.maintainAspectRatio = false;
+    Chart.defaults.maintainAspectRatio = false; // 关键配置：不允许自动拉长
 
     // Center Text Plugin for Doughnut
     const centerTextPlugin = {
